--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ package_dir =
 # add your package requirements here
 install_requires =
     numpy
+    scipy
+    scikit-image
+    h5py
+    napari
     magicgui
     qtpy
 
