--- a/src/napari_ism/napari.yaml
+++ b/src/napari_ism/napari.yaml
@@ -26,6 +26,12 @@ contributions:
     - id: napari-ISM.SimulatePSFs
       python_name: napari_ism._widget:SimulatePSFs
       title: Make example function widget
+    - id: napari-ISM.integrateDims
+      python_name: napari_ism._widget:integrateDims
+      title: Make example function widget
+    - id: napari-ISM.Focus_ISM
+      python_name: napari_ism._widget:Focus_ISM
+      title: Make example function widget
   readers:
     - command: napari-ISM.get_reader
       accepts_directories: false
@@ -54,3 +60,9 @@ contributions:
     - command: napari-ISM.SimulatePSFs
       autogenerate: true
       display_name: PSFs
+    - command: napari-ISM.integrateDims
+      autogenerate: true
+      display_name: integrateDims
+    - command: napari-ISM.Focus_ISM
+      autogenerate: true
+      display_name: Focus_ISM
