--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,19 @@
 [metadata]
 name = napari-ISM
-version = 0.1.0
+version = 0.2.0
 author = Alessandro Zunino
 author_email = alessandro.zunino@iit.it
 url = https://github.com/VicidominiLab/napari-ISM
-license = LGPL-3.0-only
-description = It performs Adaptive Pixel Reassignment.
+description = ISM simulation and analysis.
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
-    Development Status :: 2 - Pre-Alpha
-    Intended Audience :: Developers
-    Framework :: napari
-    Topic :: Software Development :: Testing
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
+	Development Status :: 4 - Beta
+	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Intended Audience :: Science/Research
+    Topic :: Scientific/Engineering :: Image Processing
     Programming Language :: Python :: 3.10
     Operating System :: OS Independent
-    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
 project_urls =
     Bug Tracker = https://github.com/VicidominiLab/napari-ISM/issues
     Documentation = https://github.com/VicidominiLab/napari-ISM#README.md
@@ -29,7 +23,7 @@ project_urls =
 [options]
 packages = find:
 include_package_data = True
-python_requires = >=3.8
+python_requires = >=3.10
 package_dir =
     =src
 
@@ -37,11 +31,8 @@ package_dir =
 install_requires =
     numpy
     scipy
-    scikit-image
     h5py
-    napari
-    magicgui
-    qtpy
+    brighteyes-ism
 
 
 [options.extras_require]
