--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,26 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "wheel", "h5py", "brighteyes-ism"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "napari-ism"
+version = "1.0.0"
+authors = [
+  { name="Alessandro Zunino", email="alessandro.zunino@iit.it" },
+]
+description = "A Napari plugin for analysing and simulating ISM images"
+readme = "README.md"
+requires-python = ">=3.10"
+license = {file = "LICENSE.txt"}
+classifiers = [
+    "Programming Language :: Python :: 3.10",
+    "Operating System :: OS Independent",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+]
 
+[project.urls]
+"Homepage" = "https://github.com/VicidominiLab/napari-ism"
+"Documentation" = "https://brighteyes-ism.readthedocs.io"
 
 [tool.black]
 line-length = 79
