--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = napari-ISM
-version = 1.0.0
+version = 1.0.1
 author = Alessandro Zunino
 author_email = alessandro.zunino@iit.it
 url = https://github.com/VicidominiLab/napari-ISM
@@ -8,6 +8,7 @@ description = ISM simulation and analysis.
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
+    Framework :: napari
 	Development Status :: 4 - Beta
 	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Intended Audience :: Science/Research
