Added support for Python >=3.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,10 @@ classifiers =
 	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Image Processing
+    Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+	Programming Language :: Python :: 3.11
     Operating System :: OS Independent
 project_urls =
     Bug Tracker = https://github.com/VicidominiLab/napari-ISM/issues
@@ -24,7 +27,7 @@ project_urls =
 [options]
 packages = find:
 include_package_data = True
-python_requires = >=3.10
+python_requires = >=3.8
 package_dir =
     =src
 
