--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,13 @@ authors = [
 ]
 description = "A Napari plugin for analysing and simulating ISM images"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8"
 license = {file = "LICENSE.txt"}
 classifiers = [
+	"Programming Language :: Python :: 3.8",
+	"Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+	"Programming Language :: Python :: 3.11",
     "Operating System :: OS Independent",
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 ]
