--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "napari-ISM"
-version = "1.0.3"
+version = "1.0.4"
 authors = [
   { name="Alessandro Zunino", email="alessandro.zunino@iit.it" },
 ]
 description = "A Napari plugin for analysing and simulating ISM images"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 license = {file = "LICENSE.txt"}
 classifiers = [
     "Framework :: napari",
+   	"Programming Language :: Python :: 3.7",
 	"Programming Language :: Python :: 3.8",
 	"Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
