--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = napari-ISM
-version = 1.0.3
+version = 1.0.4
 author = Alessandro Zunino
 author_email = alessandro.zunino@iit.it
 url = https://github.com/VicidominiLab/napari-ISM
@@ -14,6 +14,7 @@ classifiers =
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Image Processing
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Operating System :: OS Independent
@@ -26,7 +27,7 @@ project_urls =
 [options]
 packages = find:
 include_package_data = True
-python_requires = >=3.8
+python_requires = >=3.7
 package_dir =
     =src
 
