Changed display name

--- a/src/napari_ism/napari.yaml
+++ b/src/napari_ism/napari.yaml
@@ -1,5 +1,5 @@
 name: napari-ISM
-display_name: Adaptive Pixel Reassignment
+display_name: Napari-ISM
 contributions:
   commands:
     - id: napari-ISM.get_reader
