Changed version number to 1.0.5 and requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = napari-ISM
-version = 1.0.4
+version = 1.0.5
 author = Alessandro Zunino
 author_email = alessandro.zunino@iit.it
 url = https://github.com/VicidominiLab/napari-ISM
@@ -36,7 +36,7 @@ install_requires =
     numpy
     scipy
     h5py
-    brighteyes-ism
+    brighteyes-ism>=1.2.0
 
 
 [options.extras_require]
