--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools", "wheel", "h5py", "brighteyes-ism"]
+requires = ["setuptools", "wheel", "h5py", "brighteyes-ism >= 1.2.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "napari-ISM"
-version = "1.0.4"
+version = "1.0.5"
 authors = [
   { name="Alessandro Zunino", email="alessandro.zunino@iit.it" },
 ]
