--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = napari-ISM
-version = 1.0.7
+version = 1.0.8
 author = Alessandro Zunino
 author_email = alessandro.zunino@iit.it
 url = https://github.com/VicidominiLab/napari-ISM
@@ -36,7 +36,10 @@ install_requires =
     numpy
     scipy
     h5py
-    PyQt5
+    qtpy
+    matplotlib
+    napari
+    napari-plugin-engine
     brighteyes-ism>=1.2.2
 
 
